Add knockout Add rough setup for list view using knockout Add location data set Add google map Add animated markers

--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
   },
   "eslintConfig": {
     "extends": "google",
+    "rules": {
+      "space-before-function-paren": 0
+    },
     "globals": {
-      "ko": true
+      "ko": true,
+      "google": true
     }
   }
 }
